[gd_scene load_steps=21 format=3 uid="uid://jn6q8r6a24nq"]

[ext_resource type="Script" uid="uid://ng4apfprqttk" path="res://scripts/minigames/binding_minigame.gd" id="1_1sdqx"]
[ext_resource type="PackedScene" uid="uid://w4mfrgibb6s3" path="res://scenes/utils/screen_flash/green_flash.tscn" id="2_e71wc"]
[ext_resource type="FontFile" uid="uid://on5pnthgw80n" path="res://assets/fonts/Stacked pixel.ttf" id="3_1sdqx"]
[ext_resource type="PackedScene" uid="uid://dd5n8ri2bhg0u" path="res://scenes/utils/screen_flash/red_flash.tscn" id="3_ni7b6"]
[ext_resource type="Texture2D" uid="uid://bvl0ovb44jxj8" path="res://assets/rush/Untitled43_20260105180103.png" id="4_01iyk"]
[ext_resource type="Texture2D" uid="uid://6upf1qlcc4kb" path="res://assets/ui_borders/PNG/Double/Transparent border/panel-transparent-border-014.png" id="4_e71wc"]
[ext_resource type="Texture2D" uid="uid://dnkehyfnqhquk" path="res://assets/ui_borders/PNG/Default/Transparent border/panel-transparent-border-014.png" id="5_ni7b6"]
[ext_resource type="Texture2D" uid="uid://owfixpxr72uv" path="res://assets/rush/Untitled46_20260105175630.png" id="6_7e56g"]
[ext_resource type="Texture2D" uid="uid://c6iqkn6tpfwuc" path="res://assets/ui_interface/Wenrexa Interface UI KIT #4/PNG/ProgressBar_02/BarV2_Bar.png" id="8_s0iu6"]
[ext_resource type="Texture2D" uid="uid://clt4nhsj1q118" path="res://assets/ui_interface/Wenrexa Interface UI KIT #4/PNG/ProgressBar_01/BarV1_ProgressBarBorder.png" id="9_wlmos"]
[ext_resource type="Texture2D" uid="uid://d2nuucathutbl" path="res://assets/ui_interface/Wenrexa Interface UI KIT #4/PNG/ProgressBar_04/BarV4_ProgressBar.png" id="10_s0iu6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1sdqx"]
atlas = ExtResource("4_01iyk")
region = Rect2(955, 4080, 2804, 402)

[sub_resource type="AtlasTexture" id="AtlasTexture_01iyk"]
atlas = ExtResource("4_01iyk")
region = Rect2(4065, 877, 265, 367)

[sub_resource type="AtlasTexture" id="AtlasTexture_7e56g"]
atlas = ExtResource("4_01iyk")
region = Rect2(4100, 512, 216, 278)

[sub_resource type="Animation" id="Animation_01iyk"]
resource_name = "Promoter_Region_Pulse"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base/BaseContainer/PROMOTER_REGION_DESIGN:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.46666667),
"transitions": PackedFloat32Array(1, 1.8660674),
"update": 0,
"values": [Vector2(1.2132076, 1.1158038), Vector2(1.2, 1.104)]
}

[sub_resource type="Animation" id="Animation_1sdqx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Base/BaseContainer/PROMOTER_REGION_DESIGN:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1.2132076, 1.1158038)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7e56g"]
_data = {
&"Promoter_Region_Pulse": SubResource("Animation_01iyk"),
&"RESET": SubResource("Animation_1sdqx")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_7e56g"]
radius = 290.62173

[sub_resource type="AtlasTexture" id="AtlasTexture_437k3"]
atlas = ExtResource("6_7e56g")
region = Rect2(6, 57, 585, 590)

[sub_resource type="AtlasTexture" id="AtlasTexture_e71wc"]
atlas = ExtResource("6_7e56g")
region = Rect2(570, 589, 130, 111)

[node name="binding_minigame" type="CanvasLayer"]
script = ExtResource("1_1sdqx")
green_screen = ExtResource("2_e71wc")
red_screen = ExtResource("3_ni7b6")

[node name="Base" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BaseContainer" type="NinePatchRect" parent="Base"]
self_modulate = Color(0, 0.38039216, 0.34117648, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -624.5
offset_top = -313.0
offset_right = 624.5
offset_bottom = 344.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_e71wc")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="TitleContainer" type="NinePatchRect" parent="Base/BaseContainer"]
self_modulate = Color(0.73333335, 0.6392157, 0, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -241.0
offset_top = -45.0
offset_right = 262.0
offset_bottom = 83.0
grow_horizontal = 2
texture = ExtResource("5_ni7b6")
patch_margin_left = 32
patch_margin_top = 32
patch_margin_right = 32
patch_margin_bottom = 32

[node name="Title" type="Label" parent="Base/BaseContainer/TitleContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -11.5
offset_right = 34.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_1sdqx")
theme_override_font_sizes/font_size = 50
text = "INITIATION MINIGAME"

[node name="DNA_DESIGN" type="Sprite2D" parent="Base/BaseContainer"]
modulate = Color(1.2692354, 1.2692354, 1.2692354, 1)
self_modulate = Color(0.5803922, 0.5803922, 0.5803922, 1)
position = Vector2(1859.5, 329)
texture = SubResource("AtlasTexture_1sdqx")

[node name="PROMOTER_REGION_DESIGN" type="Sprite2D" parent="Base/BaseContainer"]
self_modulate = Color(1.0566169, 1.0566169, 1.0566169, 1)
position = Vector2(613.5, 340)
scale = Vector2(1.2132076, 1.1158038)
texture = SubResource("AtlasTexture_01iyk")

[node name="RNA_POLYMERASE" type="Sprite2D" parent="Base/BaseContainer"]
position = Vector2(606.5, 338)
texture = SubResource("AtlasTexture_7e56g")

[node name="ProgressBar" type="TextureProgressBar" parent="Base/BaseContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 0
offset_left = 330.5
offset_top = 554.0
offset_right = 604.5
offset_bottom = 579.0
scale = Vector2(2, 2)
texture_under = ExtResource("8_s0iu6")
texture_over = ExtResource("9_wlmos")
texture_progress = ExtResource("10_s0iu6")

[node name="Label" type="Label" parent="Base/BaseContainer"]
layout_mode = 0
offset_left = 362.5
offset_top = 83.0
offset_right = 882.5
offset_bottom = 141.0
theme_override_colors/font_color = Color(0.9744684, 0.82209194, 7.70092e-07, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_1sdqx")
theme_override_font_sizes/font_size = 70
text = "Rotate the valve!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ATP" type="Label" parent="Base/BaseContainer"]
layout_mode = 0
offset_left = 953.5
offset_top = 533.0
offset_right = 1058.5
offset_bottom = 583.0
theme_override_colors/font_color = Color(1, 1, 0.39607844, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_1sdqx")
theme_override_font_sizes/font_size = 60
text = "ATP: <null>"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_7e56g")
}

[node name="WheelContainer" type="Node2D" parent="."]
position = Vector2(128, 378)

[node name="VALVE_CLICK_AREA" type="Area2D" parent="WheelContainer"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WheelContainer/VALVE_CLICK_AREA"]
shape = SubResource("CircleShape2D_7e56g")

[node name="VALVE" type="Sprite2D" parent="WheelContainer"]
modulate = Color(0.9956146, 0.9956146, 0, 1)
texture = SubResource("AtlasTexture_437k3")

[node name="Sprite2D" type="Sprite2D" parent="WheelContainer"]
position = Vector2(3, 6)
texture = SubResource("AtlasTexture_e71wc")

[node name="RotationTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
